# MultiPL-T

./: .gitignore  .gitmodules  3.1_Further_Training_on_Natural_Data.md  Artifact Guide.md  CITATION.cff  LICENSE  README.md  build.py  convert_to_multiple_prompts.py  dedup_solutions.py  gen_prompts.sh  generate_difficulty_dataset.py  generate_pass_fail_combination_dataset.py  generate_pass_fail_dataset.py  multiple_prompts_to_hf.py  multiple_results_to_hf.py  to_huggingface_datasets.py  utils.py
3.2_Self-Instruction_for_Low-Resource_Programming_Languages/: README.md
A_A_Full_Self-Instruction-Experiment/: .gitattributes  README.md  generator.sbatch
ClassBench/: convert_to_multiple_prompts.py
analysis/: adv_plot.py  compare_more_stack.ipynb  coverage_stats.py  function_sizes.py  graphs.r  source_filtering_stats.py  subset_graph.r  train_count_graph.r  train_longer.ipynb
benchmarks/: README.md
cluster/: README.md  eval_checkpoint.sbatch  executions.sbatch  launch.sh  requirements.txt  train.py
completion-client/: Cargo.toml  Dockerfile  Dockerfile.python  Makefile  README.md  completion-pod.yaml  completion-pod.yaml.mustache  run_container.sh  setup.py  textgen.sh
completion-client/py-src/: completion.py  main.py  reader_writer.py  runner.py
completion-client/src/: completions.rs  logging.rs  main.rs  mpmc.rs  reader.rs  repr.rs  runner.rs  writer.rs
datasets/: .gitattributes  humaneval-ml.jsonl  mbpp-ml.jsonl  push_jsonl_to_hub.py  train_lua.jsonl
experiments/: README.md  eval_all.sh  multiplcoder_commits.txt  push_checkpoints.py
pass_matrix/: proc.py  (+2 more)
(+653 files in other folders)
