[package]
name = "completion-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = {version = "4.3.15", features = ["derive"] }
serde = { version = "1.0.171", features = ["derive"] }
openssl = { version = "*", features = ["vendored"] }
serde_json = "1.0"
lazy_static = "1.4"
